feat: make html layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Project Form</title>
+		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body></body>
+	<body>
+		<sidebar>
+			<div class="background-container">
+				<div class="title">
+					<img src="" alt="" />
+					<h1>Dawn Winery</h1>
+				</div>
+				<p class="attribution">Photo<a href="">By</a> On<a href="">From here</a></p>
+			</div>
+		</sidebar>
+		<main>
+			<div>
+				<p></p>
+				<p></p>
+			</div>
+			<form action="">
+				<div class="form-container">
+					<h2>Let's do this!</h2>
+					<label for="first-name">FIRST NAME</label>
+					<input type="text" name="first-name" id="first-name" required />
+					<label for="last-name">LAST NAME</label>
+					<input type="text" name="last-name" id="last-name" required />
+					<label for="password">PASSWORD</label>
+					<input type="password" name="password" id="password" />
+				</div>
+				<button>Create Account</button>
+			</form>
+			<p>Already have an account? Log in</p>
+		</main>
+	</body>
 </html>
