feat: add text content`

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 		</sidebar>
 		<main>
 			<div>
-				<p></p>
-				<p></p>
+				<p>
+					This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now
+					to get started.
+				</p>
+				<p>You know you want to.</p>
 			</div>
 			<form action="">
 				<div class="form-container">
