feat: make info paragraph

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 					</div>
 				</div>
 			</sidebar>
-			<main>
-				<div>
+			<main class="main-container">
+				<div class="infomation">
 					<p>
-						This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now
+						This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up
+						<em>now</em>
 						to get started.
 					</p>
-					<p>You know you want to.</p>
+					<p>You <em>know</em> you want to.</p>
 				</div>
 				<form action="">
 					<div class="form-container">
