--- a/index.html
+++ b/index.html
@@ -32,16 +32,38 @@
 				<form action="">
 					<div class="form-container">
 						<h2>Let's do this!</h2>
-						<label for="first-name">FIRST NAME</label>
-						<input type="text" name="first-name" id="first-name" required />
-						<label for="last-name">LAST NAME</label>
-						<input type="text" name="last-name" id="last-name" required />
-						<label for="password">PASSWORD</label>
-						<input type="password" name="password" id="password" />
+						<ul>
+							<li>
+								<label for="first-name">FIRST NAME</label>
+								<input type="text" name="first-name" id="first-name" required />
+							</li>
+							<li>
+								<label for="last-name">LAST NAME</label>
+								<input type="text" name="last-name" id="last-name" required />
+							</li>
+							<li>
+								<label for="email">EMAIL</label>
+								<input type="text" name="email" id="email" required />
+							</li>
+							<li>
+								<label for="phone-number">PHONE NUMBER</label>
+								<input type="text" name="phone-number" id="phone-number" required />
+							</li>
+							<li>
+								<label for="password">PASSWORD</label>
+								<input type="text" name="password" id="password" required />
+							</li>
+							<li>
+								<label for="confirm-password">CONFIRM PASSWORD</label>
+								<input type="text" name="confirm-password" id="confirm-password" required />
+							</li>
+						</ul>
 					</div>
-					<button>Create Account</button>
+					<div class="container-submit">
+						<button class="btn-submit">Create Account</button>
+						<p>Already have an account? <a href="#">Log in</a></p>
+					</div>
 				</form>
-				<p>Already have an account? Log in</p>
 			</main>
 		</div>
 	</body>
