--- a/index.html
+++ b/index.html
@@ -31,33 +31,35 @@
 				</div>
 				<form action="">
 					<div class="form-container">
-						<h2>Let's do this!</h2>
-						<ul>
-							<li>
-								<label for="first-name">FIRST NAME</label>
-								<input type="text" name="first-name" id="first-name" required />
-							</li>
-							<li>
-								<label for="last-name">LAST NAME</label>
-								<input type="text" name="last-name" id="last-name" required />
-							</li>
-							<li>
-								<label for="email">EMAIL</label>
-								<input type="text" name="email" id="email" required />
-							</li>
-							<li>
-								<label for="phone-number">PHONE NUMBER</label>
-								<input type="text" name="phone-number" id="phone-number" required />
-							</li>
-							<li>
-								<label for="password">PASSWORD</label>
-								<input type="text" name="password" id="password" required />
-							</li>
-							<li>
-								<label for="confirm-password">CONFIRM PASSWORD</label>
-								<input type="text" name="confirm-password" id="confirm-password" required />
-							</li>
-						</ul>
+						<div>
+							<h2>Let's do this!</h2>
+							<ul>
+								<li>
+									<label for="first-name">FIRST NAME</label>
+									<input type="text" name="first-name" id="first-name" required />
+								</li>
+								<li>
+									<label for="last-name">LAST NAME</label>
+									<input type="text" name="last-name" id="last-name" required />
+								</li>
+								<li>
+									<label for="email">EMAIL</label>
+									<input type="text" name="email" id="email" required />
+								</li>
+								<li>
+									<label for="phone-number">PHONE NUMBER</label>
+									<input type="text" name="phone-number" id="phone-number" required />
+								</li>
+								<li>
+									<label for="password">PASSWORD</label>
+									<input type="text" name="password" id="password" required />
+								</li>
+								<li>
+									<label for="confirm-password">CONFIRM PASSWORD</label>
+									<input type="text" name="confirm-password" id="confirm-password" required />
+								</li>
+							</ul>
+						</div>
 					</div>
 					<div class="container-submit">
 						<button class="btn-submit">Create Account</button>
